--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -3,6 +3,6 @@
 %td
   = form_for(user) do |f|
     = f.select(:role, User.roles.keys.map {|role| [role.titleize,role]})
-    = f.submit 'Change Role', :class => 'button-xs'
+    = f.submit 'Change Role', class: 'button-xs'
 %td
-  = link_to("Delete user", user_path(user), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button-xs') unless user == current_user
+  = link_to("Delete user", user_path(user), data: { confirm: "Are you sure?" }, method: :delete, class: 'button-xs') unless user == current_user
