--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,5 +1,7 @@
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:300,700,600,400");
+
 // Typography
-$sans-serif: $helvetica;
+$sans-serif: 'Open Sans', sans-serif;
 $serif: $georgia;
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
