some changes to root and devise

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -7,3 +7,5 @@
           - @users.each do |user|
             %tr
               = render user
+              - if user_signed_in?
+                = link_to "Sign Out", destroy_user_session_path, :method => :delete
