--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -11,4 +11,7 @@
       %td= book.description
       %td
         =link_to_if @current_user.nil?, "Login In to Add to Cart", user_session_path do
-          link_to "Add to Cart", user_cart_path(user_id: @current_user.id)
+          =link_to "Add to Cart", user_cart_path(user_id: @current_user.id)
+%p
+  - if user_signed_in?
+    = link_to "Sign Out", destroy_user_session_path, :method => :delete
