--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -2,4 +2,4 @@
 %p
   Name: #{@book.name if @book.name}
 %p
-  Email: #{@book.description if @book.description}
+  Description: #{@book.description if @book.description}
