--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -7,5 +7,5 @@
 %td
   = link_to("Delete user", user_path(user), data: { confirm: "Are you sure?" }, method: :delete, class: 'button-xs') unless user == current_user
 %td
-  - if user_signed_in?
+  - if user == current_user
     = link_to "Sign Out", destroy_user_session_path, :method => :delete
