take out haml gems, change all hamls to slims

--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,9 +1,9 @@
 .container
   .row
-    %h3 Users
+    h3 Users
     .column
-      %table.table
-        %tbody
+      table.table
+        tbody
           - @users.each do |user|
-            %tr
+            tr
               = render user
