--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -1,5 +1,5 @@
 h3 Book
 p
-  Name: #{@book.name if @book.name}
+  | Name: #{@book.name if @book.name}
 p
-  Description: #{@book.description if @book.description}
+  | Description: #{@book.description if @book.description}
