--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div id="user_nav">
+    <% if user_signed_in? %>
+      Hello, <%= current_user.name %>.
+      <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+    <% else %>
+      <%= link_to "Sign up", new_user_registration_path %> or <%= link_to "sign in",new_user_session_path %>
+    <% end %>
+  </div>
 
 <%= yield %>
 
