--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,5 +1,18 @@
-h3 User
+h2 User Information
 p
   | Name: #{@user.name if @user.name}
 p
   | Email: #{@user.email if @user.email}
+
+h2 Purchase History
+
+table
+  tr
+    th Name
+    th Description
+    th colspan="2" 
+
+  - @purchases.each do |purchase|
+    tr
+      td= link_to purchase.book.name, book_path(purchase.book.id)
+      td= purchase.book.description
