--- a/app/views/users/_user.html.slim
+++ b/app/views/users/_user.html.slim
@@ -8,4 +8,4 @@ td
   = link_to("Delete user", user_path(user), data: { confirm: "Are you sure?" }, method: :delete, class: 'button-xs') unless user == current_user
 td
   - if user == current_user
-    = link_to "Sign Out", destroy_user_session_path, :method => :delete
+    = link_to "Sign Out", destroy_user_session_path, method: :delete
