--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -2,23 +2,11 @@ h1 Library of Books
 p
   - if user_signed_in? and current_user.admin?
     = link_to "Manage Partners", admin_dashboard_index_path
-table
-  tr
-    th Name
-    th Description
-    th colspan="3" 
-
-  - @books.each do |book|
-    tr
-      td.book_name
-        = link_to book.name, book_path(book)
-      td.book_description
-        = book.description
-      td
-        =link_to_if current_user.nil?, "Login In to Add to Cart", user_session_path do
-          =link_to "Add to Cart", user_cart_path(user_id: current_user.id)
+div[id="test" books="#{@books.to_json}"]
 p
   - if user_signed_in?
     = link_to "Sign Out", destroy_user_session_path, :method => :delete
   - else
     = link_to "Sign In", new_user_session_path
+
+= javascript_include_tag "react_components/book_list"
