--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the book controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.expandedTile {
+  position: relative;
+  width: 300px;
+  height: 100px;
+  border: 2px dashed #444;
+  margin: 10px;
+}
+
+.collapsedTile {
+  position: relative;
+  width: 300px;
+  height: 50px;
+  margin: 10px;
+}
