Pass travis tests, add padding on checkbox side

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -27,4 +27,4 @@ p
   - if user_signed_in?
     = link_to "Sign Out", destroy_user_session_path, method: :delete
   - else
-    = link_to "Sign In", new_user_session_path
+    = link_to "Sign In", "#LoginModal", data: {target: "#LoginModal", toggle: "modal"}
