Add creating new users, update users model

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -67,7 +67,7 @@
               .form-group
                 label for="inputCountry" Country
                 .input
-                  = text_field_tag 'user[country]', nil, class: "inputLastName form-control", placeholder: "Enter Country", type: "email"
+                  = text_field_tag 'user[country]', nil, class: "inputLastName form-control", placeholder: "Enter Country", type: "text"
               .form-group
                 label for="inputOrg" Company/Organization
                 .input
