--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -56,14 +56,17 @@
                 .input-group
                   span.input-group-addon @
                   = text_field_tag 'user[email]', nil, class: "inputEmail form-control", placeholder: "Enter email", type: "email"
-              .form-group
-                label for="inputFirstName" First Name
-                .input
-                  = text_field_tag 'user[first_name]', nil, class: "inputFirstName form-control", placeholder: "Enter first name", type: "text"
-              .form-group
-                label for="inputLastName" Last Name
-                .input
-                  = text_field_tag 'user[last_name]', nil, class: "inputLastName form-control", placeholder: "Enter last name", type: "text"
+              .row
+                .col-lg-6
+                  .form-group
+                    label for="inputFirstName" First Name
+                    .input
+                      = text_field_tag 'user[first_name]', nil, class: "inputFirstName form-control", placeholder: "Enter first name", type: "text"
+                .col-lg-6
+                  .form-group
+                    label for="inputLastName" Last Name
+                    .input
+                      = text_field_tag 'user[last_name]', nil, class: "inputLastName form-control", placeholder: "Enter last name", type: "text"
               .form-group
                 label for="inputCountry" Country
                 .input
@@ -77,9 +80,13 @@
                 .input
                   = text_field_tag 'user[school]', nil, class: "inputLastName form-control", placeholder: "Enter School", type: "text"
               .form-group
-                label for="inputPassword" Password
-                .input-group
+                label for="inputPassword" Password (#{@minimum_password_length} characters minimum)
+                .input
                   = text_field_tag 'user[password]', nil, class: "inputPassword form-control", placeholder: "Password", type: "password"
+              .form-group
+                label for="confirmPassword" Confirm Password
+                .input-group
+                  = text_field_tag 'user[password_confirmation]', nil, class: "inputPassword form-control", placeholder: "Password", type: "password"
                   span.input-group-btn
                     button.btn.btn-default Sign up
 
