--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -80,7 +80,7 @@
                 .input
                   = text_field_tag 'user[school]', nil, class: "inputLastName form-control", placeholder: "Enter School", type: "text"
               .form-group
-                label for="inputPassword" Password (#{@minimum_password_length} characters minimum)
+                label for="inputPassword" Password (#{minimum_password_length} characters minimum)
                 .input
                   = text_field_tag 'user[password]', nil, class: "inputPassword form-control", placeholder: "Password", type: "password"
               .form-group
