--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -1,4 +1,5 @@
-h3 Partners
-- @partners.each do |p|
-  tr
-    = render p
+section
+  header
+    .page-header.h1 Manage Partners
+  
+  = react_component 'Dashboard', {}, prerender: true
