change header based on login

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -11,9 +11,25 @@
       li
         a href="/"  Library
       li
-        a href="/"  Cart
+        - if !current_user.nil?
+          = link_to "Cart", cart_path(current_user.id)
       li.end
-        a data-target="#LoginModal" data-toggle="modal" href="#LoginModal"  Log in
+        - if current_user.nil?
+          a data-target="#LoginModal" data-toggle="modal" href="#LoginModal"  Log in/Register
+        - if !current_user.nil?
+          a.dropdown-toggle data-toggle="dropdown" href="#" 
+            | My Account
+            span.caret
+          ul.dropdown-menu role="menu" 
+            li
+              a href="#" = link_to "My Purchase History", user_path(current_user.id)
+            li
+              a href="#"  = link_to "Account Settings", user_path(current_user.id)
+            li.divider
+            li
+              a href="#" = link_to "Sign Out", destroy_user_session_path, method: :delete
+
+
     /! /.nav-collapse
 
 #LoginModal.modal.fade
