--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -1,3 +1,16 @@
-// Place all the styles related to the admin/dashboard controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.listPartners {
+  height: 75vh;
+  border: 2px solid #333333;
+  padding: 10px 10px 10px 10px;
+  background: white;
+}
+
+.searchBar {
+  border: 2px solid #333333;
+  padding: 5px 5px 5px 5px;
+  background: white;
+}
+
+.noneSelectedDisplay {
+  text-align: center;
+}
