--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -199,3 +199,17 @@
 .collapse-leave.collapse-leave-active{
     opacity: 0;
 }
+
+span.tag.label.label-info{
+    font-size: 100%;
+    font-weight: normal;
+}
+
+.bootstrap-tagsinput{
+    padding: 0.75rem;
+    width: 100%;
+    margin-bottom: 0px;
+    background-color: transparent;
+    border: 0px;
+    box-shadow: none;
+}
