--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,14 +1,7 @@
-h1 Library of Books
-p
-  - if user_signed_in? and current_user.admin?
-    = link_to "Manage Partners", admin_dashboard_index_path
-p
-  - if user_signed_in? and not current_user.admin?
-    = link_to "My Purchase History", user_path(current_user.id)
-p
-  - if user_signed_in? and not current_user.admin?
-    = link_to "Cart", cart_path(current_user.id)
-
+h3.text-center Library
+- if user_signed_in? and current_user.admin?
+  = link_to "Manage Partners", admin_dashboard_index_path
+input.input-block-level type="text" class="form-control" value="10-12,12-15,Ethiopia" data-role="tagsinput" autofocus="autofocus" placeholder="Input book name or search by tag."
 div[id="book-list" books="#{@books.to_json}"]
 
 p
