--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,7 +1,13 @@
 h3.text-center Library
 - if user_signed_in? and current_user.admin?
   = link_to "Manage Partners", admin_dashboard_index_path
-input.input-block-level type="text" class="form-control" value="10-12,12-15,Ethiopia" data-role="tagsinput" autofocus="autofocus" placeholder="Input book name or search by tag."
+
+#book-searchbar.input-group
+  input.input-block-level type="text" class="form-control" value="10-12, 12-15, Ethiopia" data-role="tagsinput" autofocus="autofocus" placeholder="Input book name or search by tag."
+  span.input-group-btn
+    button.btn.btn-default type="button"
+      span.glyphicon.glyphicon-search
+
 div[id="book-list" books="#{@books.to_json}"]
 
 p
