--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -2,4 +2,4 @@ section
   header
     .page-header.h1 Manage Partners
   
-  = react_component 'Dashboard', {}, prerender: true
+  = react_component 'Dashboard', {}
