--- a/app/views/books/_cart.html.slim
+++ b/app/views/books/_cart.html.slim
@@ -3,4 +3,5 @@
     h3 Your Cart
     - current_user.cart.each do |book|
       li
-        = book.name # TODO make this a link to the book by using the search page
+        / TODO make this a link to the book by using the search page
+        = book.name
