--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -13,7 +13,7 @@ h3.text-center Library
       button.btn.btn-default type="button"
         span.glyphicon.glyphicon-search
 
-  div[id="book-list" books="#{@books.to_json}"]
+  div[id="book-list"]
   = javascript_include_tag "react_components/book_list"
 
 p
