--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -1,5 +1,4 @@
-$cart-view-width: 200px;
-
+$cart-view-width: 250px;
 
 .collapsed-book-tile {
     height: 180px;
@@ -229,8 +228,7 @@ span.tag.label.label-info{
   background-color: white;
   top: 150px;
   border-radius: 3px;
-  padding: 5px;
-  padding-left: 0px;
+  padding: 10px;
 
   ul {
     margin-bottom: 20px;
@@ -244,5 +242,19 @@ span.tag.label.label-info{
     text-decoration:none;
     color:#ccc;
     padding:5px 5px 5px 25px;
+  }
+
+  .close {
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 18px;
+    color: #000000;
+    text-shadow: 0 1px 0 #ffffff;
+    opacity: 0.2;
+    filter: alpha(opacity=20);
+    text-decoration: none;
+    border: none;
+    background: white;
+    padding-right: 5px;
   }
 }
