--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -22,12 +22,12 @@
             span.caret
           ul.dropdown-menu role="menu" 
             li
-              a = link_to "My Purchase History", user_path(current_user.id)
+              = link_to "My Purchase History", user_path(current_user.id)
             li
-              a = link_to "Account Settings", user_path(current_user.id)
+              = link_to "Account Settings", user_path(current_user.id)
             li.divider
             li
-              a = link_to "Sign Out", destroy_user_session_path, method: :delete
+              = link_to "Sign Out", destroy_user_session_path, method: :delete
 
 
     /! /.nav-collapse
