--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -2,18 +2,12 @@ h3.text-center Library
 - if user_signed_in? and current_user.admin?
   = link_to "Manage Partners", admin_dashboard_index_path
 
-.container
+.col-md-8.col-md-offset-2
   #book-searchbar.input-group
     input.input-block-level type="text" class="form-control" value="10-12, 12-15, Ethiopia" data-role="tagsinput" autofocus="autofocus" placeholder="Input book name or search by tag."
     span.input-group-btn
       button.btn.btn-default type="button"
         span.glyphicon.glyphicon-search
 
-  div[id="library"]
-  = javascript_include_tag "react_components/library"
-
-p
-  - if user_signed_in?
-    = link_to "Sign Out", destroy_user_session_path, method: :delete
-  - else
-    = link_to "Sign In", "#LoginModal", data: {target: "#LoginModal", toggle: "modal"}
+div[id="library"]
+= javascript_include_tag "react_components/library"
