--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -3,7 +3,7 @@ h3.text-center Library
   = link_to "Manage Partners", admin_dashboard_index_path
 
 #book-searchbar.input-group
-  input.input-block-level type="text" class="form-control" value="10-12, 12-15, Ethiopia" data-role="tagsinput" autofocus="autofocus" placeholder="Input book name or search by tag."
+  input#book-searchbar-input.input-block-level.typeahead placeholder=("Input book name or search by tag.") type="text" class="form-control"
   span.input-group-btn
     button.btn.btn-default type="button"
       span.glyphicon.glyphicon-search
