changes to dashboard

--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -1,18 +1,99 @@
-.listPartners {
-  height: 75vh;
-  padding: 10px 10px 10px 10px;
+.topDiv {
+  height: 65px;
   background: white;
 }
 
-.searchBar {
-  padding: 5px 5px 5px 5px;
+.navbar-form {
+  width: 100%;
+}
+
+.searchInput {
+  float: left;
+}
+
+.searchButton {
+  float: right;
+}
+
+.listPartners {
   background: white;
+  padding: 10px 10px 10px 10px;
+  min-height: 600px;
+  max-height: 600px;
+  overflow: scroll;
+}
+
+.emptyBottomSpace {
+  height: 65px;
 }
 
 .noneSelectedDisplay {
   text-align: center;
+  height: 300px;
+  position: relative;
+  top: 100px;
+  font-style: italic;
+  font-size: medium;
 }
 
-.GroupExpand {
+#admin-dashboard-nav {
+  font-size: x-large;
+  width: 100%;
+}
+
+#information {
+  float: left;
+  text-align: center;
+  width: 33%;
+}
+
+#groups {
+  text-align: center;
+  width: 33%;
+}
+
+#newPurchases {
   float: right;
+  text-align: center;
+  width: 33%;
+}
+
+.name {
+  font-weight: bold;
+  font-size: x-large;
+  text-align: center;
+}
+
+.info {
+  top: 50px;
+}
+
+.mainDisplay {
+  min-height: 800px;
+  max-height: 800px;
+  overflow: scroll;
+}
+
+#informationDisplay {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.groupContainer {
+  padding-left: 50px;
+}
+
+.groupExpand {
+  float: right;
+}
+
+.groupBooks {
+  max-height: 300px;
+  overflow: scroll;
+  padding-top: 25px;
+  padding-left: 25px;
+}
+
+.purchaseDisplay {
+  padding-left: 50px;
 }
