--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -10,7 +10,7 @@
     ul.nav.navbar-nav.navbar-right
       li
         a href="/"  Library
-      li
+      li#cart-item
         - if !current_user.nil?
           a#cart_header.dropdown-toggle data-toggle="dropdown" href="#"
             = javascript_include_tag "react_components/cart_header"
