move cart to backbone

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -10,4 +10,4 @@ h3.text-center Library
         span.glyphicon.glyphicon-search
 
 div[id="library"]
-= javascript_include_tag "react_components/library"
+  = react_component 'BookList', {books: @books}
