--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -200,16 +200,18 @@ $cart-view-width: 250px;
 
 #book-searchbar{
     margin-bottom: 1rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+}
+
+#book-tagbar{
+    margin-bottom: 1rem;
 }
 
 .bootstrap-tagsinput{
     padding: 0.5rem;
     margin-bottom: 0px;
     background-color: white;
-    border-top-right-radius: 0px;
-    border-bottom-right-radius: 0px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
     box-shadow: none;
     display: block;
 }
