--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -14,4 +14,4 @@ h2.text-center Library
     input#book-tagbar-input.input-block-level.typeahead placeholder=("Add tag") type="text" class="form-control"
 
 div[id="library"]
-  = react_component 'BookList', {books: @books}
+  = react_component 'BookList'
