--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -6,7 +6,7 @@ h2.text-center Library
   #book-searchbar.input-group
     input#book-searchbar-input.input-block-level placeholder=("Search for books") type="text" class="form-control"
     span.input-group-btn
-      button.btn.btn-default type="button"
+      button#search-button.btn.btn-default type="button"
         span.glyphicon.glyphicon-search
   #book-tagbar.input-group
     span.input-group-addon
