--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -19,6 +19,18 @@
       li.end
         - if current_user.nil?
           a data-target="#LoginModal" data-toggle="modal" href="#LoginModal"  Log in/Register
+        - elsif current_user.admin?
+          a.dropdown-toggle data-toggle="dropdown" href="#"
+            | My Account
+            span.caret
+          ul.dropdown-menu role="menu"
+            li
+              = link_to "Manage Partners", admin_dashboard_index_path
+            li
+              = link_to "Account Settings", user_path(current_user.id)
+            li.divider
+            li
+              = link_to "Sign Out", destroy_user_session_path, method: :delete
         - else
           a.dropdown-toggle data-toggle="dropdown" href="#"
             | My Account
