remove register tab from modal

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -18,7 +18,7 @@
             = react_component 'Cart', {cart: @cart}
       li.end
         - if current_user.nil?
-          a data-target="#LoginModal" data-toggle="modal" href="#LoginModal"  Log in/Register
+          a data-target="#LoginModal" data-toggle="modal" href="#LoginModal"  Log in
         - elsif current_user.admin?
           a.dropdown-toggle data-toggle="dropdown" href="#"
             | My Account
@@ -52,14 +52,9 @@
     .modal-content
       .modal-header
         button.close aria-hidden="true" data-dismiss="modal" type="button"  ×
-        h4.modal-title Login or Register your account
+        h4.modal-title Login
 
       .modal-body
-        ul.nav.nav-tabs
-          li.active
-            a data-toggle="tab" href="#login"  Login
-          li
-            a data-toggle="tab" href="#register"  Sign up
         #modal-tab-content.tab-content
           #login.tab-pane.active.in
             = form_tag session_path(:user) do
@@ -79,63 +74,5 @@
               .span.navbar-right
                 = check_box_tag 'user[remember_me]', 1, false, class:"pad-right"
                 = label_tag 'user[remember_me]', 'Keep me logged in'
-
-          #register.tab-pane.fade
-            = form_tag registration_path(:user) do
-              .form-group
-                label for="inputEmail" E-mail address
-                .input-group
-                  span.input-group-addon @
-                  = text_field_tag 'user[email]', nil, class: "inputEmail form-control", placeholder: "Enter email", type: "email"
-              .row
-                .col-lg-6
-                  .form-group
-                    label for="inputFirstName" First Name
-                    .input
-                      = text_field_tag 'user[first_name]', nil, class: "inputFirstName form-control", placeholder: "Enter first name", type: "text"
-                .col-lg-6
-                  .form-group
-                    label for="inputLastName" Last Name
-                    .input
-                      = text_field_tag 'user[last_name]', nil, class: "inputLastName form-control", placeholder: "Enter last name", type: "text"
-              .form-group
-                label for="inputCountry" Country
-                .input
-                  = text_field_tag 'user[country]', nil, class: "inputLastName form-control", placeholder: "Enter Country", type: "text"
-              .form-group
-                label for="inputOrg" Company/Organization
-                .input
-                  = text_field_tag 'user[organization]', nil, class: "inputLastName form-control", placeholder: "Enter Organization", type: "text"
-              .form-group
-                label for="inputSchool" School
-                .input
-                  = text_field_tag 'user[school]', nil, class: "inputLastName form-control", placeholder: "Enter School", type: "text"
-              .form-group
-                label for="inputPassword" Password (#{minimum_password_length} characters minimum)
-                .input
-                  = text_field_tag 'user[password]', nil, class: "inputPassword form-control", placeholder: "Password", type: "password"
-              .form-group
-                label for="confirmPassword" Confirm Password
-                .input-group
-                  = text_field_tag 'user[password_confirmation]', nil, class: "inputPassword form-control", placeholder: "Password", type: "password"
-                  span.input-group-btn
-                    button.btn.btn-default Sign up
-
-        / dropdown for account?
-        / li.dropdown
-        /   a.dropdown-toggle data-toggle="dropdown" href="#"
-        /     | My Account
-        /     span.caret
-        /   ul.dropdown-menu role="menu"
-        /     li
-        /       a href="#"  Action
-        /     li
-        /       a href="#"  Another action
-        /     li
-        /       a href="#"  Something else here
-        /     li.divider
-        /     li
-        /       a href="#"  Separated link
-
     /! /.navbar-collapse
   /! /.container-fluid
