added book list to checkout page

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -12,4 +12,4 @@ h2.text-center Library
     input#book-tagbar-input.input-block-level.typeahead placeholder=("Add tag") type="text" class="form-control"
 
 div[id="library"]
-  = react_component 'BookList'
+  = react_component 'BookList', {books: @books}
