--- a/app/views/carts/show.html.slim
+++ b/app/views/carts/show.html.slim
@@ -1,14 +1,24 @@
-h3 My Cart
-table
-  tr
-    th Name
-    th Description
-    th Date Purchased
-    th colspan="3"
+/h3 My Cart
+/table
+/  tr
+/    th Name
+/    th Description
+/    th Date Purchased
+/    th colspan="3"
+/
+/  - @cart_items.each do |item|
+/    tr
+/      td
+/        =link_to item.book.name, book_path(item.book.id)
+/      td= item.book.description
+/      td= item.purchased_on
 
-  - @cart_items.each do |item|
-    tr
-      td 
-        =link_to item.book.name, book_path(item.book.id)
-      td= item.book.description
-      td= item.purchased_on
+h2.text-center My Cart
+
+.col-md-10.col-md-offset-1
+  .col-md-6
+    h3.text-center Paid Books
+    = react_component 'BookList', {books: @paid_books}
+  .col-md-6
+    h3.text-center Donated Books
+    = react_component 'BookList', {books: @donated_books}
