--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -48,7 +48,7 @@ $cart-view-width: 250px;
 
 .expanded-book-desc {
     display: block;
-    max-height: 150px;
+    min-height: 150px;
     overflow: hidden;
 }
 
@@ -67,7 +67,7 @@ $cart-view-width: 250px;
     transition: height .5s;
 
     .expanded-book-tile {
-        height: 180px;
+        min-height: 180px;
         padding: 10px;
         transition: all .5s;
     }
@@ -225,3 +225,7 @@ $cart-view-width: 250px;
     display: block;
 }
 
+span.tag.label.label-info{
+    font-size: 100%;
+    font-weight: normal;
+}
