--- a/app/views/carts/show.html.slim
+++ b/app/views/carts/show.html.slim
@@ -2,9 +2,12 @@
 h2.text-center My Cart
 
 .col-md-10.col-md-offset-1
-  .col-md-6
-    h3.text-center Paid Books
-    = react_component 'BookList', {books: @paid_books, small: true}
-  .col-md-6
-    h3.text-center Donated Books
-    = react_component 'BookList', {books: @donated_books, small: true}
+  .book-lists
+    .col-md-6
+      h3.text-center Paid Books
+      = react_component 'BookList', {books: @paid_books, small: true}
+    .col-md-6
+      h3.text-center Donated Books
+      = react_component 'BookList', {books: @donated_books, small: true}
+  .btn
+    button Checkout
