add 2rem spacing at bottom, fix small padding issue that made things not centered

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -1,5 +1,10 @@
 $cart-view-width: 250px;
 
+.media-list {
+    margin-bottom: 2rem;
+    padding: 0;
+}
+
 .collapsed-book-tile {
     height: 180px;
     padding: 10px;
