--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -27,7 +27,7 @@ $cart-view-width: 250px;
 }
 
 .expanded-book-tile {
-    height: 340px;
+    min-height: 340px;
     padding: 10px;
     outline: gray solid thin;
     background-color: white;
@@ -228,4 +228,24 @@ $cart-view-width: 250px;
 span.tag.label.label-info{
     font-size: 100%;
     font-weight: normal;
+}
+
+// Icon image
+.icon-book-img-box {
+    overflow: auto;
+    width: 150px;
+    height: 150px;
+}
+
+.icon-book-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 150px;
+}
+
+.icon-book-tile {
+    min-height: 200px;
+    padding: 10px;
+    background-color: white;
 }
