--- a/app/views/carts/show.html.slim
+++ b/app/views/carts/show.html.slim
@@ -1,5 +1,10 @@
 
-h2.text-center My Cart
+.col-md-4.col-md-offset-4
+  h2.text-center My Cart
+.col-md-2.col-md-offset-2
+  button.btn.btn-default.checkout-btn Checkout
+
+
 
 .col-md-10.col-md-offset-1
   .book-lists
@@ -9,5 +14,6 @@ h2.text-center My Cart
     .col-md-6
       h3.text-center Donated Books
       = react_component 'BookList', {books: @donated_books, small: true}
-  .btn
-    button Checkout
+
+.col-md-2.col-md-offset-10
+  button.btn.btn-default.checkout-btn Checkout
