--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,5 +11,6 @@ html
     link href="http://fonts.googleapis.com/css?family=Raleway:400,300,700" rel="stylesheet" type="text/css"
 
   body
+    = render 'shared/flash', flash: flash
     = render 'layouts/header'
     = yield
