--- a/app/assets/stylesheets/carts.css.scss
+++ b/app/assets/stylesheets/carts.css.scss
@@ -3,3 +3,12 @@
   margin-top: 20px;
   margin-bottom: 10px;
 }
+.dropdown-menu {
+    width: 200px !important;
+}
+
+.cart-header-item {
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+}
