added csv download

--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -102,3 +102,16 @@
 .purchaseDisplay {
   padding-left: 50px;
 }
+
+.badge {
+  float: right;
+}
+
+#downloadPurchaseButton {
+  float: right;
+}
+
+#selectAllButton {
+  float: left;
+  background-color: #d9edf7;
+}
