--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -53,17 +53,19 @@ $cart-view-width: 250px;
 
 .expanded-book-desc {
     display: block;
-    min-height: 150px;
     overflow: hidden;
 }
 
 .book-tags {
     margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .book-tag {
     display: inline-block;
     margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.5rem;
 }
 
 .expand-enter {
