change font (mainly headers) size (particularly in booktile), put things in rows

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -3,6 +3,7 @@ $cart-view-width: 250px;
 .media-list {
     margin-bottom: 2rem;
     padding: 0;
+    font-size: 1.75rem;
 }
 
 .collapsed-book-tile {
