--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -109,6 +109,12 @@
 
 #downloadPurchaseButton {
   float: right;
+  margin-right: 50px;
+  background-color: #66FF33;
+}
+
+#disapproveButton {
+  background-color: #FF3333;
 }
 
 #selectAllButton {
