--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -110,11 +110,11 @@
 #downloadPurchaseButton {
   float: right;
   margin-right: 50px;
-  background-color: #66FF33;
+  background-color: #5cb85c;
 }
 
 #disapproveButton {
-  background-color: #FF3333;
+  background-color: #d9534f;
 }
 
 #selectAllButton {
