admin recommendation page in progress

--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -120,4 +120,9 @@
 #selectAllButton {
   float: left;
   background-color: #d9edf7;
+
+.tabDisplay {
+  min-height: 800px;
+  max-height: 800px;
+  overflow: scroll;
 }
