--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -1,5 +1,5 @@
 section
-  header
-    .page-header.h1 Manage Partners
+  / header
+  /   .page-header.h1 Manage Partners
   
-  = react_component 'Dashboard', {}
+  = react_component 'DashboardTabs', {}
