admin recommendation page in progress

--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -102,3 +102,9 @@
 .purchaseDisplay {
   padding-left: 50px;
 }
+
+.tabDisplay {
+  min-height: 800px;
+  max-height: 800px;
+  overflow: scroll;
+}
