recommendation delete still buggy, display not complete

--- a/app/assets/stylesheets/admin/dashboard.css.scss
+++ b/app/assets/stylesheets/admin/dashboard.css.scss
@@ -127,3 +127,15 @@
   float: left;
   background-color: #d9edf7;
 }
+
+.top-buffer {
+  margin-top: 20px;
+}
+
+.side-buffer {
+  margin-left: 5px;
+}
+
+.inline {
+  display: inline-block;
+}
